--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
            Akun ini adalah akun khusus bulol mas
           <a href="https://www.instagram.com/joshu_acoustic/">@joshu_acoustic</a> member of <a href="https://www.instagram.com/saythename_17/">@saythename_17</a> dan juga untuk ngespam sg heheheh :D Tolong jangan follow duluan kecuali kamu member 17 baru boleh follow akun ini duluan. Kalau mau follow silakan follow di  <a href="https://www.instagram.com/risnandahm/">@risnandahm</a>. Thank you!</p>
           <div class="hero_btn-continer">
-            <audio controls autoplay>
-            <source src="audio/joshua.mp3" type="audio/mp3">
-             Your browser does not support the audio element.
-              </audio>
+            <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/id/album/7pm-apple-music-home-session/1677396037?i=1677396228&l=id"></iframe>
           </div>
         </div>
         <div class="hero_img-container">
