--- a/index.html
+++ b/index.html
@@ -154,23 +154,16 @@
                   <div class="row">
                       <div class="col-md-3">
                         <div class="client_img-box">
-                          <iframe width="260" height="200" src="https://www.youtube.com/embed/-GQg25oP0S4?controls=0&amp;start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                          <iframe width="260" height="200" src=https://www.youtube.com/embed/zSQ48zyWZrY?controls=0&amp;start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                       </div>
                       <div class="col-md-9">
                         <div class="client_detail-box">
                           <h5>
-                            Awali harimu dengan streaming super dulu :D
+                            Awali harimu dengan streaming god of music!
                           </h5>
                           <p>
-                            I love my team, I love my crew,
-                            Yeogikkaji dallimyeonseo,
-                            I love my team, I love my crew
-                            Gyesok dallil su isseo deo,
-                            I love my team, I love my crew,
-                            Yeogikkaji oreumyeonseo,
-                            I love my team, geu deokbune urin,
-                            Machi doen geot gata sonogong !!
+                            kung chi pak chi kung kung chi park jiye :p
                           </p>
                         </div>
                       </div>
@@ -232,7 +225,7 @@
                 </h5>
                <p>
                   saya suka manhwa, suka seventeen, terus paling suka ya mv                   
-                  <a href="https://www.youtube.com/watch?v=-GQg25oP0S4">#Super</a> 
+                  <a href="https://www.youtube.com/watch?v=zSQ48zyWZrY">#GodOfMusic</a> 
                </p>
               </div>
               <div class="col-md-3">
