--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <link rel="icon" href="images/hero.png" type="image/gif" sizes="16x16">
-  <title>attacva</title>
+  <title>nandacintajoshuahong</title>
 
 
 
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              attacva
+              nandacintajoshuahong
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -70,7 +70,7 @@
       <div class="hero-container container">
         <div class="hero_detail-box">
           <h1>
-            Hello, this is @attacva
+            Hello, this is @nandacintajoshuahong
           </h1>
           <p>
            Akun ini adalah akun khusus bulol mas
