--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="row">
               <div class="col-md-3">
                 <h5>
-                    About @attacva                                                                            
+                    About @nandacintajoshuahong                                                                            
                 </h5>
                <p>
                   saya suka manhwa, suka seventeen, terus paling suka ya mv                   
@@ -283,7 +283,7 @@
   <section class="container-fluid footer_section">
     <p>
       Copyright &copy; 2023 All Rights By
-      <a href="https://instagram.com/attacva">@attacva</a>
+      <a href="https://instagram.com/nandacintajoshuahong">@nandacintajoshuahong</a>
     </p>
   </section>
   <!-- footer section -->
