--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       <div class="hero-container container">
         <div class="hero_detail-box">
           <h1>
-            Hello, this is @nandacintajoshuahong
+            Hello,
           </h1>
           <p>
-           Akun ini adalah akun khusus bulol mas
+           akun ini adalah akun khusus bulol mas
           <a href="https://www.instagram.com/joshu_acoustic/">@joshu_acoustic</a> member of <a href="https://www.instagram.com/saythename_17/">@saythename_17</a> dan juga untuk ngespam sg heheheh :D Tolong jangan follow duluan kecuali kamu member 17 baru boleh follow akun ini duluan. Thank you!</p>
           <div class="hero_btn-continer">
            <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/id/album/7pm-apple-music-home-session/1677396037?i=1677396228&theme=light"></iframe>
