--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="row">
               <div class="col-md-3">
                 <h5>
-                    About @nandacintajoshuahong                                                                            
+                    About                                                                        
                 </h5>
                <p>
                   saya suka manhwa, suka seventeen, terus paling suka ya mv                   
