--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                         <div class="client_img-box">
                           <iframe width="260" height="200" src=https://www.youtube.com/embed/L4SoJzhaOj4?controls=0&amp;start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
+                      </div>
                           <p>
                             STREAM BRO!
                           </p>
