--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              nandacintajoshuahong
+              ashteropane
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -73,7 +73,7 @@
             Hello,
           </h1>
           <p>
-           akun ini adalah akun khusus bulol mas
+           akun ini adalah akun untuk hype
           <a href="https://www.instagram.com/joshu_acoustic/">@joshu_acoustic</a> member of <a href="https://www.instagram.com/saythename_17/">@saythename_17</a> dan juga untuk ngespam sg heheheh :D Tolong jangan follow duluan kecuali kamu member 17 baru boleh follow akun ini duluan. Thank you!</p>
           <div class="hero_btn-continer">
            <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/id/album/7pm-apple-music-home-session/1677396037?i=1677396228&theme=light"></iframe>
@@ -251,14 +251,14 @@
               <div class="social_container">
                  
                   <div class="social-box">
-                    <a href="https://web.facebook.com/nndha.mufidah/">
+                    <a href="https://facebook.com/">
                       <img src="images/fb.png" alt="">
                     </a>
-                    <a href="https://www.linkedin.com/in/risnandahm/">
-                      <img src="images/linkedin.png" alt="https://www.linkedin.com/in/risnandahm/">
+                    <a href="">
+                      <img src="images/linkedin.png" alt="">
                     </a>
-                    <a href="https://instagram.com/risnandahm">
-                      <img src="images/instagram.png" alt="https://instagram.com/risnandahm">
+                    <a href="https://instagram.com/joshu_acoustic">
+                      <img src="images/instagram.png" alt="https://instagram.com/joshu_acoustic">
                     </a>
                   </div>
                 </div>
@@ -269,7 +269,7 @@
   <section class="container-fluid footer_section">
     <p>
       Copyright &copy; 2023 All Rights By
-      <a href="https://instagram.com/nandacintajoshuahong">@nandacintajoshuahong</a>
+      <a href="https://instagram.com/ashteropane">ashteropane</a>
     </p>
   </section>
   <!-- footer section -->
